myelin-macros/tests/ui/fail_unknown_attr_key.stderr
error: myelin::service: unknown argument `whatever`; the only currently supported key is `api_id`
 --> tests/ui/fail_unknown_attr_key.rs:1:19
  |
1 | #[myelin::service(whatever = 1)]
  |                   ^^^^^^^^
