myelin-macros/tests/ui/fail_unknown_attr_key.rs
#[myelin::service(whatever = 1)]
pub trait FooService {
    fn bar(&self);
}

fn main() {}
